--- a/.github/workflows/main-orchestrator-dispatch.yml
+++ b/.github/workflows/main-orchestrator-dispatch.yml
@@ -11,14 +11,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      target_repo:
-        description: 'Target repository to deploy'
-        required: true
-        default: 'agrofix-dev'
-        type: choice
-        options:
-          - agrofix-dev
-          - agrofix-prod
       component:
         description: 'Component to deploy (or "all")'
         required: true
@@ -28,6 +20,9 @@ on:
           - all
           - ui
           - api
+          - dashboard
+          - submission
+          - gateway
       environment:
         description: 'Target environment'
         required: true
@@ -54,18 +49,18 @@ jobs:
       - name: Log deployment parameters
         run: |
           echo "🚀 Deployment Orchestrator Starting"
-          echo "Target Repository: ${{ github.event.inputs.target_repo || 'Not specified' }}"
           echo "Component: ${{ github.event.inputs.component || 'Not specified' }}"
           echo "Environment: ${{ github.event.inputs.environment || 'Not specified' }}"
+          echo "Triggered by: ${{ github.actor }}"
 
-      # Trigger deployments to target repositories
+      # Trigger UI deployment
       - name: Trigger BusinessProposalEvaluator.UI Deployment
         if: ${{ github.event.inputs.component == 'ui' || github.event.inputs.component == 'all' }}
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.ORCHESTRATOR_PAT }}" \
-            https://api.github.com/repos/snlinfo2/agrofix-dev/dispatches \
+            https://api.github.com/repos/snlinfo2/BusinessProposalEvaluator.UI/dispatches \
             -d '{
               "event_type": "deploy-signal",
               "client_payload": {
@@ -75,15 +70,16 @@ jobs:
                 "run_id": "${{ github.run_id }}"
               }
             }'
-          echo "✅ Triggered UI deployment"
+          echo "✅ Triggered UI deployment to BusinessProposalEvaluator.UI repository"
 
-      - name: Trigger LVT API Deployment
+      # Trigger LVT API deployment
+      - name: Trigger Lvtapp_uas API Deployment
         if: ${{ github.event.inputs.component == 'api' || github.event.inputs.component == 'all' }}
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.ORCHESTRATOR_PAT }}" \
-            https://api.github.com/repos/snlinfo2/agrofix-dev/dispatches \
+            https://api.github.com/repos/snlinfo2/Lvtapp_uas/dispatches \
             -d '{
               "event_type": "deploy-signal",
               "client_payload": {
@@ -93,7 +89,64 @@ jobs:
                 "run_id": "${{ github.run_id }}"
               }
             }'
-          echo "✅ Triggered API deployment"
+          echo "✅ Triggered API deployment to Lvtapp_uas repository"
+
+      # Trigger Dashboard API deployment
+      - name: Trigger lvtapp_dashbs Dashboard API Deployment
+        if: ${{ github.event.inputs.component == 'dashboard' || github.event.inputs.component == 'all' }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.ORCHESTRATOR_PAT }}" \
+            https://api.github.com/repos/snlinfo2/lvtapp_dashbs/dispatches \
+            -d '{
+              "event_type": "deploy-signal",
+              "client_payload": {
+                "environment": "${{ github.event.inputs.environment }}",
+                "component": "dashboard",
+                "triggered_by": "${{ github.actor }}",
+                "run_id": "${{ github.run_id }}"
+              }
+            }'
+          echo "✅ Triggered Dashboard API deployment to lvtapp_dashbs repository"
+
+      # Trigger Submission Service deployment
+      - name: Trigger Lvtapp_BProposalSubmissionService Deployment
+        if: ${{ github.event.inputs.component == 'submission' || github.event.inputs.component == 'all' }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.ORCHESTRATOR_PAT }}" \
+            https://api.github.com/repos/snlinfo2/Lvtapp_BProposalSubmissionService/dispatches \
+            -d '{
+              "event_type": "deploy-signal",
+              "client_payload": {
+                "environment": "${{ github.event.inputs.environment }}",
+                "component": "submission",
+                "triggered_by": "${{ github.actor }}",
+                "run_id": "${{ github.run_id }}"
+              }
+            }'
+          echo "✅ Triggered Submission Service deployment to Lvtapp_BProposalSubmissionService repository"
+
+      # Trigger Gateway/OCELOT Server deployment
+      - name: Trigger lvt-ocelot-server-service Deployment
+        if: ${{ github.event.inputs.component == 'gateway' || github.event.inputs.component == 'all' }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.ORCHESTRATOR_PAT }}" \
+            https://api.github.com/repos/snlinfo2/lvt-ocelot-server-service/dispatches \
+            -d '{
+              "event_type": "deploy-signal",
+              "client_payload": {
+                "environment": "${{ github.event.inputs.environment }}",
+                "component": "gateway",
+                "triggered_by": "${{ github.actor }}",
+                "run_id": "${{ github.run_id }}"
+              }
+            }'
+          echo "✅ Triggered Gateway deployment to lvt-ocelot-server-service repository"
 
       # Runs a multi-line script for completion
       - name: Deployment Orchestration Complete
@@ -101,12 +154,13 @@ jobs:
           echo "🎉 Deployment orchestration completed!"
           echo "Components triggered: ${{ github.event.inputs.component }}"
           echo "Target environment: ${{ github.event.inputs.environment }}"
-          echo "Check the target repository's Actions tab for deployment status."
-          
-      # Optional: Monitor deployment status (basic implementation)
-      - name: Verify Deployment Status
-        if: ${{ always() }}
-        run: |
-          echo "📊 Deployment orchestration finished"
-          echo "The target repositories have received the deployment signal."
-          echo "Note: Actual deployment completion depends on the target repository workflows."
+          echo ""
+          echo "Target repositories:"
+          echo "-------------------"
+          ${{ github.event.inputs.component == 'ui' || github.event.inputs.component == 'all' }} && echo "• BusinessProposalEvaluator.UI (UI)"
+          ${{ github.event.inputs.component == 'api' || github.event.inputs.component == 'all' }} && echo "• Lvtapp_uas (API)"
+          ${{ github.event.inputs.component == 'dashboard' || github.event.inputs.component == 'all' }} && echo "• lvtapp_dashbs (Dashboard API)"
+          ${{ github.event.inputs.component == 'submission' || github.event.inputs.component == 'all' }} && echo "• Lvtapp_BProposalSubmissionService (Submission Service)"
+          ${{ github.event.inputs.component == 'gateway' || github.event.inputs.component == 'all' }} && echo "• lvt-ocelot-server-service (Gateway)"
+          echo ""
+          echo "Check each repository's Actions tab for deployment status."
